--- a/css/homeStyle.css
+++ b/css/homeStyle.css
@@ -162,3 +162,22 @@ html,body {
     transform: rotate(180deg);
     transition: transform 0.3s ease; /* Add a smooth transition */
 }
+
+@media (max-width: 767px) {
+    #checker {
+        display: none;
+    }
+
+    #container {
+        display: none;
+    }
+    #container1 {
+        display: none;
+    }
+}
+
+.glass-effect {
+    backdrop-filter: blur(10px); /* Apply background blur */
+    background-color: rgba(25, 30, 41, 0.5); /* Set background color with opacity */
+}
+
